# eket

./: .claudeignore  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  COPILOT.md  CURSOR.md  Dockerfile  EKET-EXPLORATION-REPORT.md  EKET_RUST_REWRITE_SUMMARY.md  EPIC-006-BACKLOG.md  EPIC-006-FINAL-REPORT.md  EPIC-006-PARALLEL-EXECUTION-LOG.md  PR-TASK-601.md  PROJECT-100-PERCENT-COMPLETE.md  QUICKSTART.md  README.html  README.md  README_zh-CN.md  STATUS-SUMMARY.md  TASK-005-IMPLEMENTATION-REPORT.md  TASK-603-606-COMPLETION-SUMMARY.md  TASK-603-FINAL-REPORT.md  TASK-603-optimization-log.md  TASK-603-optimization-summary.md  TASK-604-COMPLETION-REPORT.md  TASK-609-FINAL-REPORT.md  TASK-609-optimization-log.md  TASK-609-optimization-summary.md  TEST_FAILURE_ANALYSIS.md  docker-compose.test.yml  docker-compose.yml  eket-behavior-equivalence-analysis.md  eket-quick-reference.md  eket-rust-fix-guide.md  (+7 more)
.claude/: settings.json  settings.local.json
.cursor/: rules
.eket/: ACTIVE_CONTEXT.md  IDENTITY.md  completion-summary-TASK-AUTO-02.md  config.yml  slaver-id
.githooks/: pre-commit  pre-commit-branch-check
.github/: CODEOWNERS  pull_request_template.md
.playwright-mcp/: page-2026-04-19T17-11-20-895Z.yml  page-2026-05-26T00-46-16-256Z.yml  page-2026-05-26T00-46-35-923Z.yml  page-2026-05-26T00-47-07-460Z.yml  page-2026-05-26T00-47-37-732Z.yml  page-2026-05-26T00-48-09-244Z.yml  page-2026-05-26T00-48-27-569Z.yml  page-2026-05-26T00-49-00-402Z.yml  page-2026-05-26T16-17-36-243Z.yml  page-2026-05-26T16-18-25-262Z.yml  page-2026-05-26T16-18-58-513Z.yml  page-2026-05-26T16-19-27-961Z.yml  page-2026-05-26T16-20-26-033Z.yml  page-2026-05-26T16-21-04-273Z.yml
benchmarks/: baseline.json  check-regression.mjs  simple-benchmark.js
confluence/: progress-tracker.md
docker/: compose.dev.yml
docs/: ARCHIVE_EXPLANATION.md  ARCHIVE_REPORT.md  BUG_FIXES_2026-04-07.md  COMMUNICATION-PROTOCOL.md  DAG-SECURITY.md  DOCUMENTATION_AUDIT_REPORT.md  IDENTITY.md  IMPLEMENTATION-v0.7-phase2.md  IMPLEMENTATION_SUMMARY.md  INDEX.html  INDEX.md  INITIALIZATION-GUIDE.md  MASTER-WORKFLOW.md  README.html  README.md  RELEASE-v0.7.md  SLAVER-AUTO-EXEC-GUIDE.md  STATUS_REPORT.md  (+10 more)
docs-site/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
rust/: Cargo.toml
rust/crates/context-mon/: Cargo.toml
rust/crates/context-mon/benches/: startup.rs
rust/crates/context-mon/src/: estimator.rs  lib.rs  main.rs
rust/crates/crates/benches/: startup.rs
rust/crates/crates/src/: lib.rs  main.rs
rust/crates/crates/tests/: precision.rs
rust/crates/eket-cli/: Cargo.toml  build.rs
rust/crates/eket-cli/src/: guardrail_middleware.rs  main.rs  slaver_rules.rs
rust/crates/eket-cli/src/commands/: alerts_list.rs  analyze_structure.rs  batch.rs  db_commands.rs  db_recover.rs  dependency_analyze.rs  doc_create.rs  doc_status.rs  epic_create.rs  epic_plan.rs  expert_compose.rs  expert_summon.rs  fingerprint.rs  gate_review.rs  handoff.rs  knowledge.rs  master_heartbeat.rs  master_poll.rs  memory_review.rs  mod.rs  project_status.rs  roadmap_update.rs  server.rs  skill_extract.rs  slaver_poll.rs  slaver_register.rs  slaver_set_role.rs  spike_complete.rs  spike_create.rs  submit_pr.rs  system_doctor.rs  task_claim.rs  task_complete.rs  task_create.rs  task_progress.rs  task_resume.rs  task_test.rs  team_status.rs  ticket_index.rs  webhook.rs  (+1 more)
rust/crates/eket-core/: Cargo.toml
rust/crates/eket-core/migrations/: 0001_initial.sql  0002_task_source_timestamps.sql
rust/crates/eket-core/src/: cache.rs  circuit_breaker.rs  config.rs  dag.rs  doc_lifecycle.rs  edge.rs  election.rs  error.rs  expert_skill_bridge.rs  expertise_embedding.rs  file.rs  guardrail.rs  lib.rs  middleware_pipeline.rs  migrations.rs  node.rs  pubsub.rs  queue.rs  redis.rs  registry.rs  saga.rs  skill_index.rs  ticket.rs  tracing.rs  types.rs  webhook.rs
rust/crates/eket-core/src/analyzer/: language.rs  mod.rs  non_code.rs  structure.rs  types.rs
rust/crates/eket-core/src/analyzer/extractors/: go.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
rust/crates/eket-core/src/batch/: mod.rs  neighbor_map.rs  splitter.rs
rust/crates/eket-core/src/benchmark/: harness.rs  metrics.rs  mod.rs  tasks.rs
rust/crates/eket-core/src/db/: mod.rs  schema.sql
rust/crates/eket-core/src/expert/: importance.rs  mod.rs
rust/crates/eket-core/src/fingerprint/: classifier.rs  hash.rs  mod.rs  storage.rs
rust/crates/eket-core/src/gate/: mod.rs
rust/crates/eket-core/src/gate/checks/: mod.rs  surgical.rs
rust/crates/eket-core/src/scoring/: mod.rs  trust_engine.rs
rust/crates/eket-engine/: Cargo.toml
rust/crates/eket-engine/benches/: mask_sensitive_bench.rs  scheduler_bench.rs  scheduler_scale.rs
rust/crates/eket-engine/src/: agent_pool.rs  conflict_resolver.rs  context_budget.rs  context_filter.rs  event_bus.rs  knowledge.rs  knowledge_base.rs  lib.rs  lock.rs  mailbox.rs  monitors.rs  protocol.rs  recommender.rs  reconciler.rs  step_snapshot.rs  ticket_engine.rs  workflow.rs
rust/crates/eket-engine/src/dag/: checkpoint.rs  executor.rs  fusion.rs  mod.rs  scheduler.rs  schema.rs
rust/crates/eket-engine/src/memory/: mod.rs  vector_store.rs
rust/crates/eket-server/: Cargo.toml
rust/crates/eket-server/src/: auth.rs  hooks.rs  lib.rs  main.rs  ws.rs
rust/crates/eket-server/tests/: auth_degradation.rs
rust/docs/: FALLBACK.md
rust/logs/: context-monitor.jsonl
rust/tests/: bench_claim.sh  e2e_smoke.sh
sdk/python/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DELIVERY.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASING.md  mypy.ini  pyproject.toml  setup.py  verify_install.py
sdk/python/eket_sdk/: __init__.py  client.py  exceptions.py  models.py  utils.py
sdk/python/examples/: README.md  __init__.py  auto_heartbeat.py  claim_task.py  complete_workflow.py  error_handling.py  register_agent.py  submit_pr.py
sdk/python/tests/: __init__.py  test_client.py  test_models.py  test_task056_fixes.py
(+3210 files in other folders)
