[workspace]
members = [
    "crates/eket-core",
    "crates/eket-engine",
    "crates/eket-cli",
    "crates/eket-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EKET Team"]
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full", "process"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "1"
anyhow = "1"

# Config
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Redis
fred = { version = "9", features = ["i-keys", "i-lists", "i-hashes", "i-sets", "i-pubsub", "i-scripts", "subscriber-client"] }

# HTTP (axum)
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
moka = { version = "0.12", features = ["future"] }
regex = "1"
async-trait = "0.1"
tantivy = "0.22"
dashmap = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
