[package]
name = "context-mon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "context-mon"
path = "src/main.rs"

[dependencies]
tiktoken-rs = "0.5"
glob = "0.3"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "startup"
harness = false
