[package]
name = "context-mon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "context-mon"
path = "src/main.rs"

[dependencies]
walkdir = "2.5"
tiktoken-rs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "startup"
harness = false
