[package]
name = "eket-engine"
version.workspace = true
edition.workspace = true

[dependencies]
eket-core = { path = "../eket-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
moka = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
futures = "0.3"
rusqlite = { workspace = true }
