[package]
name = "eket-engine"
version.workspace = true
edition.workspace = true

[dependencies]
eket-core = { path = "../eket-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
moka = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
tantivy = { workspace = true }
dashmap = { workspace = true }
regex = "1"  # TASK-638: Script log sanitization
once_cell = "1"  # TASK-657: Regex precompilation

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
futures = "0.3"
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "scheduler_scale"
harness = false

[[bench]]
name = "mask_sensitive_bench"
harness = false

[lints]
workspace = true
