[package]
name = "eket-server"
version.workspace = true
edition.workspace = true

[dependencies]
eket-core = { path = "../eket-core" }
eket-engine = { path = "../eket-engine" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
