[package]
name = "eket-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "eket-server"
path = "src/main.rs"

[lib]
name = "eket_server"
path = "src/lib.rs"

[dependencies]
eket-core = { path = "../eket-core" }
eket-engine = { path = "../eket-engine" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
constant_time_eq = "0.3"
jsonwebtoken = "9"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
